<resources>
    <string name="app_name">Climazona</string>
    <string name="app_name_label">Climazona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Climazona</string>
    <string name="nav_header_subtitle">Weather App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="api_key_text" translatable="false">072ea6623297eeb2b74bc0a705f05a2c</string>
    <string name="my_location_menu_item_text">My location</string>
    <string name="other_locations_menu_text">Other locations</string>
    <string name="share_app_menu_text">Share App</string>
    <string name="feedback_menu_text">Feedback</string>
    <string name="my_location_fragment_label">My location</string>
    <string name="other_locations_fragment_label">Other locations</string>
    <string name="smart_weather_app_header_text">Smart open weather app</string>
    <string name="weather_icon_app_description">Weather icon app</string>
    <string name="report_an_issue_text">Report an issue</string>
    <string name="share_app_text">Share App</string>
    <string name="climazona_helps_you">Climazona helps you:</string>
    <string name="about_app_content_1">Access current weather data for any location on earth in real time!</string>
    <string name="about_app_content_2">Get forecasts by city name, geographic coordinates or postal/ZIP code.</string>
    <string name="access_weather_btn_text">Access Weather</string>
    <string name="package_name_text" translatable="false">com.www.climazona</string>
    <string name="about_app_content_3">Get local weather alerts based on custom events that matter to you!</string>
    <string name="text_share_app_1">Climazona: Smart and open weather app.</string>
    <string name="text_share_app_2">Tap the link below to download it on Play Store:</string>
    <string name="app_store_link_text" translatable="false">App link</string>
    <string name="share_app_dialog_title_text">Share App via:</string>
    <string name="email_app_for_reports_and_feedback" translatable="false">oke.benoit@gmail.com</string>
    <string name="tell_us_about_issue_text">Tell us about the issue</string>
    <string name="report_issue_via_text">Report an issue via:</string>
    <string name="tell_us_how_to_improve_app">Tell us how to improve the app</string>
    <string name="send_feedback_via_text">Send us a feedback via:</string>
    <string name="location_permission_warning_text">Climazona needs access to your device location to retrieve current weather data.</string>
    <string name="today_tab_text">Today</string>
    <string name="tomorrow_tab_text">Tomorrow</string>
    <string name="forecast_tab_text">Forecast</string>
</resources>