<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_location"
            android:icon="@drawable/ic_action_current_location"
            android:title="@string/my_location_menu_item_text" />
        <item
            android:id="@+id/nav_other_locations"
            android:icon="@drawable/ic_action_other_locations"
            android:title="@string/other_locations_menu_text" />

        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_action_share_app"
            android:title="@string/share_app_menu_text" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_action_feedback"
            android:title="@string/feedback_menu_text" />

        <item
            android:id="@+id/nav_report_issue"
            android:icon="@drawable/ic_action_report_issue"
            android:title="@string/report_an_issue_text" />
    </group>
</menu>